contact us faqs

--- a/app_public/templates/contact/contact.html
+++ b/app_public/templates/contact/contact.html
@@ -122,6 +122,12 @@
             </form>
          </div>
       </div>
+      <div class="row">
+         <div class="col text-center">
+            <h5>Frequently asked questions (FAQs) </h5>
+            <a  class="font-weight-bold" target="_blank" href="{% url 'faq' %}#student-certificate">How to download certificate?<a/>
+         </div>
+      </div>
    </div>
    {% comment %} container {% endcomment %}
 </section>
