--- a/app_students/templates/courses/detail.html
+++ b/app_students/templates/courses/detail.html
@@ -855,6 +855,8 @@
     (function ($) {
         $("header").hide();
 
+        $('#ratingModal').modal('show')
+
         $.CourseDetailManager = function (options) {
             var that = this;
 
