--- a/app_admin/templates/admin_base.html
+++ b/app_admin/templates/admin_base.html
@@ -12,7 +12,7 @@
 
       <link href="{% static '/sb-admin/vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css" />
       
-      <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
+      {% comment %} <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" /> {% endcomment %}
 
       <!-- Custom styles for this template-->
       <link href="{% static '/sb-admin/css/sb-admin-2.css' %}" rel="stylesheet" />
@@ -259,10 +259,11 @@
       <script src="{% static '/sb-admin/vendor/jquery.form.min.js' %}"></script>
       <script src="{% static '/sb-admin/vendor/moment.min.js' %}"></script>
       <script src="{% static '/sb-admin/vendor/chart.js/Chart.min.js' %}"></script>
+      <script src="{% static '/edutim/vendors/handlebars.min.js' %}"></script>
 
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.min.js"></script>
+      {% comment %} <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script> {% endcomment %}
+      {% comment %} <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.min.js"></script> {% endcomment %}
 
       <!-- Custom scripts for all pages-->
       <script src="{% static '/sb-admin/js/sb-admin-2.js' %}"></script>
