--- a/app_students/templates/courses/detail.html
+++ b/app_students/templates/courses/detail.html
@@ -855,7 +855,7 @@
     (function ($) {
         $("header").hide();
 
-        $('#ratingModal').modal('show')
+        //$('#ratingModal').modal('show')
 
         $.CourseDetailManager = function (options) {
             var that = this;
